Migrate code to utilize Java 21 features